// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple dast /2 with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      
      
      
      
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`simple dast with no links/blocks with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      
      
      
      
      
      
    </div>
    
    
    
  </div>
</body>
`;

exports[`with links/blocks with default rules renders the document 1`] = `
<body>
  <div>
    <div>
      
      
      
      
      
      <p>
        <a
          href="http://www.datocms.com"
          rel="nofollow"
          target="_blank"
        >
          Empty link
          
          
          
          
          
        </a>
        
        
        
        
        
      </p>
      
      
      
      
      <div>
        No component to render QuoteRecord of ID: 456
      </div>
      
      
      
    </div>
    
    
    
  </div>
</body>
`;
